# semblis

./: AUTHORS  LICENSE  Makefile  Makefile.am  README  configure.ac
include/: ForeignMacros.h  classifier.h  config.h  data.h  environment.h  eval.h  gc.h  hashtable.h  iamarDocs.h  lib_loader.h  logger.h  macros.h  output.h  prims.h  reader.h  semblis.h  types.h  utils.h  windll.h
mingw/: libString.cbp  libString.layout  semblis.cbp  semblis.layout
plugins/: BufferPlugin.cpp  CSocketPlugin.cpp  EnvRestore.cpp  Makefile  Makefile.am  StringPlugin.cpp  buffer.cfg  envrestore.cfg  net.cfg  stringlib.cfg
src/: Makefile.am  ave.sem  character-mesh.sem  cond-macro.sem  eval-test.sem  init.sem  let-macro-test.sem  lookup-mesh.sem  main.c  semblis.cfg  str_test.sem  string-test.sem  test-import.sem  test.sem  test2.sem  while-macro.sem
src/libsemblis/: Makefile  Makefile.am  classifier.c  config.c  core_prims.c  data.c  engine.c  environment.c  eval.c  gc.c  hashtable.c  lib_loader.c  libsemblis.vcproj  libsemblis_vc2003.vcproj  logger.c  output.c  pretty_printer.c  reader.c  search_dir.c  utils.c
src/tests/: Makefile  env_restore_test.sem  filter-extensions.sem  init2.sem  let-macro.sem  mem_trace_checker.py  semblis.cfg  test-import.sem  test.sem
utils/: convWrapper.py  createAllWrappers  gen-ff-config.py  gen-ff-interfaces.py  write_wrapper.sh
