lib_LTLIBRARIES = libsemblis.la
libsemblis_la_SOURCES = \
	hashtable.c \
	logger.c \
	data.c \
	environment.c \
	pretty_printer.c \
	gc.c \
	engine.c \
	config.c \
	utils.c \
	lib_loader.c \
	core_prims.c \
	reader.c \
	classifier.c \
	eval.c \
	search_dir.c \
	output.c
libsemblis_la_CFLAGS = -I../../include/ -g -Wall
libsemblis_la_LIBADD = -ldl

